Fixed Error Icon position for Add Note dialog, which was hidden by scrollbar before in IE9

--- a/scss/base/_errors.scss
+++ b/scss/base/_errors.scss
@@ -40,3 +40,9 @@ input.has_error, textarea.has_error {
     background: red;
     color: white;
 }
+
+.ie9, ie8, ie7, ie6 {
+    textarea.has_error {
+        background-position: 93%;
+    }
+}
